# CECSupport

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  release.yml
crates/cec-support-service/: Cargo.toml
crates/cec-support-service/src/: lib.rs
docs/: ROADMAP.md  WINDOWS-CODE-SIGNING.md
gui/: index.html  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
gui/src/: app.css  main.ts  store.svelte.ts  tauri.ts  types.ts
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/.cargo/: config.toml
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: README.md  icon.icns
gui/src-tauri/src/: main.rs
gui/src/ui/: AccessList.svelte  App.svelte  ApproveModal.svelte  ChatPanel.svelte  ConfirmDialog.svelte  ConnectedBanner.svelte  ContactCard.svelte  KvmClaimCard.svelte  KvmWifiModal.svelte  NumberScreen.svelte  PurchaseModal.svelte  SettingsPanel.svelte  SpecSheet.svelte  StartScreen.svelte
scripts/: bump-version.sh  install.ps1  install.sh
